fix(navigation): set min-width for mdn-user-menu
Avoids layout shift.

--- a/components/navigation/base.css
+++ b/components/navigation/base.css
@@ -17,3 +17,9 @@
   column-gap: 1rem;
   align-items: center;
 }
+
+.navigation__popup {
+  mdn-user-menu {
+    min-width: 2.125rem; /* 34px */
+  }
+}
